uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: ClusterIP
  ports:
    - name: kuma-web-ui
      protocol: TCP
      port: 3001
      targetPort: 3001
  selector:
    app: uptime-kuma
